src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_notice__c</fullName>
        <inlineHelpText>Number of days before contract expiration when notice for renew will be created.</inlineHelpText>
        <label>Expiration notice</label>
        <picklist>
            <picklistValues>
                <fullName>30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Part_of_Nordic_Agreement_Name__c</fullName>
        <description>Part of Nordic Agreement Name</description>
        <label>Part of Nordic Agreement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_cancellation__c</fullName>
        <label>Reason for cancellation</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Customer terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postnord terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0540</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Terms_of_payment__c</fullName>
        <label>Terms of payment</label>
        <picklist>
            <picklistValues>
                <fullName>7 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 days from the accounting date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 5 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 8 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 12 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 14 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 15 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 20 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 25 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 45 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month extended with 2 days with fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month extended with 2 days without fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month extended with 7 days with fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Terms_of_payment_text__c</fullName>
        <label>Terms of payment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of contract</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordic Framework Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>Products__c</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Products__c</field>
            <operation>notContain</operation>
            <value>DPD</value>
        </filters>
        <label>All Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>PN_DK_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Products__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Area__c</field>
            <operation>equals</operation>
            <value>1000,4000,0540,LO DK</value>
        </filters>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>PN DK Aktive Contracts</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Postnord</fullName>
        <active>true</active>
        <label>Postnord</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contract_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(Status, &apos;active&apos;)   &amp;&amp;  ISBLANK(EndDate) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>EndDate</errorDisplayField>
        <errorMessage>Contract end date needs to be set for active contracts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_is_mandatory_for_cancelled</fullName>
        <active>true</active>
        <description>Reason for cancellation is mandatory for contract in status cancelled</description>
        <errorConditionFormula>ISPICKVAL(Status, &apos;Cancelled&apos;)  &amp;&amp; ISPICKVAL(Reason_for_cancellation__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Reason_for_cancellation__c</errorDisplayField>
        <errorMessage>Reason for cancellation needs to be set when status = Cancelled</errorMessage>
    </validationRules>
</CustomObject>